Risoluzione code smell